--- a/style/style.scss
+++ b/style/style.scss
@@ -51,7 +51,7 @@ body{
       padding: 10px;
       background: transparent;
       border: 1px solid $third-color;
-      font-size: 16pz;
+      font-size: 16px;
       font-weight:400;
       outline: none;
       resize: none;
@@ -68,9 +68,13 @@ body{
       border: none;
       outline: none;
       cursor: pointer;
+      display: flex;
+      align-items: center;
+      flex-direction: row;
 
       ion-icon{
         padding-left: 10%;
+        font-size: 35px;
       }
       
       :active{
@@ -78,19 +82,17 @@ body{
       }
     }
 
-    .span{
-      .copied{
-        display: block;
-        margin-top: 50px;
-        text-align: center;
-        font-size: $fifth-color;
-        transform: scale(x, y);
-        transition: bounceIn 0.8s linear; 
-      }
+    .copied{
+      display: block;
+      margin-top: 50px;
+      text-align: center;
+      font-size: $fifth-color;
+      transform: scale(0);
+      transition: bounceIn 0.8s linear; 
+    }
 
-      .bounce-effect{
-        animation: bounceIn0.8 linear;
-      }
+    .bounce-effect{
+      animation: bounceIn 0.8s linear;
     }
 
     .d-none{
@@ -98,6 +100,33 @@ body{
     }
 
     /* bounceIN Animation*/
+    @keyframes bounceIn {
+      0% {
+        opacity: 0;
+        transform: scale(0.3);
+      }
+
+      20%{
+        transform: scale(1.1);
+      }
+
+      40%{
+        transform: scale(0.9);
+      }
+
+      60%{
+        transform: scale(1.03);
+      }
+
+      80% {
+        transform: scale(0.97);
+      }
+
+      100%{
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
   } 
 }
 
